# benchmarks

./: .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION_PLAN.md  NOTICE  README.md  SECURITY.md  __init__.py  base_adapter.py  calibration.py  compare_results.py  download_datasets.py  runner.py
commit0/: AAR_2026-04-21.md  AAR_2026-04-22_B3_ADDENDUM.md  AAR_2026-04-22_FINAL.md  AAR_2026-05-05_PHASE1_ADDENDUM.md  CAMPAIGN_README.md  PLAN_2026-04-21.md  PROTOCOL.md
humaneval/: __init__.py  adapter.py
mbpp/: __init__.py  adapter.py
realworld/: PROTOCOL.md
round_trip/: PLAN.md  PROTOCOL.md  README.md  SESSION_PROMPT.md  code_edit_loop.py  critique_edit_loop.py  cross_model_review.py  decompose_from_reference.py  dynamic_intent.py  lang_adapter.py  multilang_lite.py  multilang_one.py  recompose_from_adrs.py  remeasure_q1.py  remediation.py  run_lite.py  run_one.py  smoke_ablation.py  (+1 more)
round_trip/multilang_runs/recomposed/serde_json/: Cargo.toml
round_trip/multilang_runs/recomposed/serde_json/src/: de.rs  error.rs  iter.rs  lib.rs  macros.rs  map.rs  number.rs  raw.rs  read.rs  ser.rs
round_trip/multilang_runs/recomposed/serde_json/src/io/: core.rs  mod.rs
round_trip/multilang_runs/recomposed/serde_json/src/lexical/: algorithm.rs  bhcomp.rs  bignum.rs  cached.rs  cached_float80.rs  digit.rs  errors.rs  exponent.rs  float.rs  large_powers.rs  large_powers32.rs  large_powers64.rs  math.rs  mod.rs  num.rs  parse.rs  rounding.rs  shift.rs  small_powers.rs
round_trip/multilang_runs/recomposed/serde_json/src/value/: de.rs  from.rs  index.rs  mod.rs  partial_eq.rs  ser.rs
(+541 files in other folders)
