[package]
name = "serde_json"
version = "1.0.149"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A JSON serialization file format"
documentation = "https://docs.rs/serde_json"
edition = "2021"
keywords = ["json", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/json"
rust-version = "1.71"

[dependencies]
indexmap = { version = "2.2.3", optional = true }
itoa = "1.0"
memchr = { version = "2", default-features = false }
serde = { version = "1.0.220", default-features = false }

[dev-dependencies]
indoc = "2.0.2"
ref-cast = "1.0.18"
rustversion = "1.0.13"
serde = { version = "1.0.194", features = ["derive"] }
serde_bytes = "0.11.10"
serde_stacker = "0.1.8"

[features]
default = ["std"]
std = ["memchr/std", "serde/std"]
alloc = ["serde/alloc"]
preserve_order = ["indexmap", "std"]
float_roundtrip = []
arbitrary_precision = []
raw_value = []
unbounded_depth = []
